<resources>
    <string name="app_name">Home Cooking</string>
    <string name="action_home">Home</string>
    <string name="action_formula">Công Thức</string>
    <string name="action_product">Sản Phẩm</string>
    <string name="action_me">Tôi</string>
    <string name="action_cart">Giỏ Hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_preference">com.cntt.homecooking_shared_preference</string>
    <string name="login_status_shared_preference">com.cntt.homecooking_login_status_shared_preference</string>

    <!--    Facebook-->
    <string name="facebook_app_id">273332624663743</string>
    <string name="fb_login_protocol_scheme">fb273332624663743</string>


    <string-array name="phuongthucthanhtoan">
        <item>Thanh Toán Trực Tiếp</item>
        <item>PayPal</item>
    </string-array>

</resources>